latest 21st aug

--- a/about.html
+++ b/about.html
@@ -135,8 +135,8 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </div>
 <div id="mobile-menu-wrap"></div>
 <ul class="offcanvas__widget">
-<li><span class="icon_phone"></span> +44 20 7930 8205</li>
-<li><span class="icon_pin"></span> 450 Strand, Charing Cross, London</li>
+<li><span class="icon_phone"></span> +1 540-380-0024</li>
+<li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
 <div class="offcanvas__auth">
 <a href="#"><span class="icon_profile"></span> Register or Sign in</a>
@@ -156,8 +156,8 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="row">
 <div class="col-lg-9 offset-lg-3">
 <ul class="header__top__widget">
-<li><span class="icon_phone"></span> +44 20 7930 8205</li>
-<li><span class="icon_pin"></span> 450 Strand, Charing Cross, London</li>
+<li><span class="icon_phone"></span> +1 540-380-0024</li>
+<li><span class="icon_pin"></span>5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
 <div class="header__top__right">
 <div class="header__top__right__auth">
@@ -201,42 +201,43 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 
 </ul>
 </li>
-<li><a href="#">Testinomials</a>
+<li><a href="testimonials.html">Testinomials</a>
 <ul class="dropdown">
+  <li><a href="./testimonials.html">Testimonials</a></li>
 <li><a href="./Feedback.html">Feedback Survey</a></li>
 </ul>
 </li>
 <li><a href="./discount.html">Discounts</a></li>
 <li><a href="#">Service Areas</a>
-<ul class="dropdown">
-<li><a href="./about.html">Ashburn VA</a></li>
-<li><a href="./services-details.html">Dumfries VA</a></li>
-<li><a href="./blog-details.html">Fairfax VA</a></li>
-<li><a href="./blog-details.html">Herndon VA</a></li>
-<li><a href="./blog-details.html">Leesburg VA</a></li>
-<li><a href="./blog-details.html">Manassas VA</a></li>
-<li><a href="./blog-details.html">Sterling VA</a></li>
-<li><a href="./blog-details.html">Alexandria VA</a></li>
-<li><a href="./blog-details.html">Annandale VA</a></li>
-<li><a href="./blog-details.html">Arlington VA</a></li>
-<li><a href="./blog-details.html">Bristow VA</a></li>
-<li><a href="./blog-details.html">Burke VA</a></li>
-<li><a href="./blog-details.html">Centreville VA</a></li>
-<li><a href="./blog-details.html">Chantilly VA</a></li>
-<li><a href="./blog-details.html">Falls Church VA</a></li>
-<li><a href="./blog-details.html">Fredrickburg VA</a></li>
-<li><a href="./blog-details.html">Gainesville VA</a></li>
-<li><a href="./blog-details.html">Mc Lean VA</a></li>
-<li><a href="./blog-details.html">Reston VA</a></li>
-<li><a href="./blog-details.html">Springfield</a></li>
-<li><a href="./blog-details.html">Stafford VA</a></li>
-<li><a href="./blog-details.html">Vienna VA</a></li>
-<li><a href="./blog-details.html">Woodbridge VA</a></li>
+  <ul class="dropdown">
+<li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
+<li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
+<li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
+<li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
+<li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
+<li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
+<li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
+<li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
+<li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
+<li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
+<li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
+<li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
+<li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
+<li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
+<li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
+<li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
+<li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
+<li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
+<li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
+<li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
+<li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
+<li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
+<li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
 </ul>
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
-<li><a href="./contact.html">Booking</a></li>
+<li><a href="./contact.html">Reserve Ride</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
