--- a/areas.html
+++ b/areas.html
@@ -125,7 +125,8 @@
 <span class="icon_search search-switch"></span>
 </div>
 <div class="offcanvas__logo">
-<a href="./index.html"><script type="text/javascript" style="display:none">
+<a href="./index.html">
+  <script type="text/javascript" style="display:none">
 //<![CDATA[
 window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 //]]>
@@ -135,8 +136,8 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </div>
 <div id="mobile-menu-wrap"></div>
 <ul class="offcanvas__widget">
-<li><span class="icon_phone"></span> +44 20 7930 8205</li>
-<li><span class="icon_pin"></span> 450 Strand, Charing Cross, London</li>
+<li><span class="icon_phone"></span> +1 540-380-0024</li>
+<li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
 <div class="offcanvas__auth">
 <a href="#"><span class="icon_profile"></span> Register or Sign in</a>
@@ -156,8 +157,8 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="row">
 <div class="col-lg-9 offset-lg-3">
 <ul class="header__top__widget">
-<li><span class="icon_phone"></span> +44 20 7930 8205</li>
-<li><span class="icon_pin"></span> 450 Strand, Charing Cross, London</li>
+<li><span class="icon_phone"></span> +1 540-380-0024</li>
+<li><span class="icon_pin"></span>5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
 <div class="header__top__right">
 <div class="header__top__right__auth">
@@ -201,42 +202,42 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 
 </ul>
 </li>
-<li><a href="#">Testinomials</a>
+<li><a href="testimonials.html">Testinomials</a>
 <ul class="dropdown">
 <li><a href="./Feedback.html">Feedback Survey</a></li>
 </ul>
 </li>
 <li><a href="./discount.html">Discounts</a></li>
 <li class="active"><a href="#">Service Areas</a>
-<ul class="dropdown">
-<li><a href="./about.html">Ashburn VA</a></li>
-<li><a href="./services-details.html">Dumfries VA</a></li>
-<li><a href="./blog-details.html">Fairfax VA</a></li>
-<li><a href="./blog-details.html">Herndon VA</a></li>
-<li><a href="./blog-details.html">Leesburg VA</a></li>
-<li><a href="./blog-details.html">Manassas VA</a></li>
-<li><a href="./blog-details.html">Sterling VA</a></li>
-<li><a href="./blog-details.html">Alexandria VA</a></li>
-<li><a href="./blog-details.html">Annandale VA</a></li>
-<li><a href="./blog-details.html">Arlington VA</a></li>
-<li><a href="./blog-details.html">Bristow VA</a></li>
-<li><a href="./blog-details.html">Burke VA</a></li>
-<li><a href="./blog-details.html">Centreville VA</a></li>
-<li><a href="./blog-details.html">Chantilly VA</a></li>
-<li><a href="./blog-details.html">Falls Church VA</a></li>
-<li><a href="./blog-details.html">Fredrickburg VA</a></li>
-<li><a href="./blog-details.html">Gainesville VA</a></li>
-<li><a href="./blog-details.html">Mc Lean VA</a></li>
-<li><a href="./blog-details.html">Reston VA</a></li>
-<li><a href="./blog-details.html">Springfield</a></li>
-<li><a href="./blog-details.html">Stafford VA</a></li>
-<li><a href="./blog-details.html">Vienna VA</a></li>
-<li><a href="./blog-details.html">Woodbridge VA</a></li>
+  <ul class="dropdown">
+<li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
+<li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
+<li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
+<li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
+<li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
+<li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
+<li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
+<li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
+<li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
+<li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
+<li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
+<li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
+<li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
+<li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
+<li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
+<li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
+<li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
+<li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
+<li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
+<li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
+<li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
+<li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
+<li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
 </ul>
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
-<li><a href="./contact.html">Booking</a></li>
+<li><a href="./contact.html">Reserve Ride</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
@@ -268,7 +269,15 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="row">
 <div class="col-lg-6">
 <div class="section-title">
-    <h3>Assisted Medical Transportation Services In <span>Fairfax VA</span></h3>
+    <h3 id="test">Assisted Medical Transportation Services In <span id="area">
+      <script>
+    const urlParams1 = new URLSearchParams(window.location.search);
+    const areaValue1 = urlParams1.get('areaName');
+    const myEle = document.getElementById("test");
+    const area = document.getElementById("area");
+    area.innerHTML = areaValue1;
+  </script>
+      </span></h3>
 <h4><ul>
     <li>AIRPORTS MEDICAL & NON-MEDICAL TRANSPORTATION SERVICES</li><br>
     <li>PATIENT MEDICAL & NON-MEDICAL TRANSPORT SERVICES</li><br>
@@ -293,7 +302,16 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
   <p>Best Assisted Rides in VA</p>
 <h2>SENIOR CITIZENS TRANSPORTATION SERVICES</h2>
 
-<p>Our highly trained staff members are dedicated to responding with promptness, sensitivity, and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes thorough background checks and has completed extensive training in the handling of patients with special needs to ensure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality. VA Transportation Healthcare LLC is the leading company for assisted medical transportation & nursing homes transportation in <span>Fiarfax, Va</span>, call us for more details or to schedule an appointment.</p>
+<p id="test1">Our highly trained staff members are dedicated to responding with promptness, sensitivity, and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes thorough background checks and has completed extensive training in the handling of patients with special needs to ensure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality. VA Transportation Healthcare LLC is the leading company for assisted medical transportation & nursing homes transportation in
+   <span id="area2">
+  <script>
+    const urlParams2 = new URLSearchParams(window.location.search);
+    const areaValue2 = urlParams2.get('areaName');
+    const myEle2 = document.getElementById("test1");
+    const area2 = document.getElementById("area2");
+    area2.innerHTML = areaValue2;
+  </script>
+  </span>, call us for more details or to schedule an appointment.</p>
 
 </div>
 </div>
@@ -314,7 +332,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="col-lg-6">
     <h4>MAKE AN APPOINTMENT</h4> <br>
           
-            <form class = "data" name="data" id="data" action="http://192.168.0.36:8000/">
+            <form class = "data" name="data" id="data" action="http://172.20.10.10:8000/">
             <div class="form-group" style="padding-top: 1%;">
               <label for="exampleInput" style="padding-right: 15%;">Name*:</label>
               <input type="text" name="Patient_name" class="form-control form-control-lg" id="exampleInput" placeholder="Enter the name" required>
@@ -333,7 +351,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
             <br>
             
             <div class="form-floating">
-              <textarea class="form-control" name="Comments" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+              <textarea class="form-control" name="comment" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
               <label for="floatingTextarea2"></label>
             </div> <br>
             <button type="submit" class="btn btn-success" style="color: white; background-color: orangered;">Submit</button>         
