--- a/contact.html
+++ b/contact.html
@@ -208,42 +208,42 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 
 </ul>
 </li>
-<li><a href="#">Testinomials</a>
+<li><a href="testimonials.html">Testinomials</a>
 <ul class="dropdown">
 <li><a href="./Feedback.html">Feedback Survey</a></li>
 </ul>
 </li>
 <li><a href="./discount.html">Discounts</a></li>
 <li><a href="#">Service Areas</a>
-<ul class="dropdown">
-<li><a href="./about.html">Ashburn VA</a></li>
-<li><a href="./services-details.html">Dumfries VA</a></li>
-<li><a href="./blog-details.html">Fairfax VA</a></li>
-<li><a href="./blog-details.html">Herndon VA</a></li>
-<li><a href="./blog-details.html">Leesburg VA</a></li>
-<li><a href="./blog-details.html">Manassas VA</a></li>
-<li><a href="./blog-details.html">Sterling VA</a></li>
-<li><a href="./blog-details.html">Alexandria VA</a></li>
-<li><a href="./blog-details.html">Annandale VA</a></li>
-<li><a href="./blog-details.html">Arlington VA</a></li>
-<li><a href="./blog-details.html">Bristow VA</a></li>
-<li><a href="./blog-details.html">Burke VA</a></li>
-<li><a href="./blog-details.html">Centreville VA</a></li>
-<li><a href="./blog-details.html">Chantilly VA</a></li>
-<li><a href="./blog-details.html">Falls Church VA</a></li>
-<li><a href="./blog-details.html">Fredrickburg VA</a></li>
-<li><a href="./blog-details.html">Gainesville VA</a></li>
-<li><a href="./blog-details.html">Mc Lean VA</a></li>
-<li><a href="./blog-details.html">Reston VA</a></li>
-<li><a href="./blog-details.html">Springfield</a></li>
-<li><a href="./blog-details.html">Stafford VA</a></li>
-<li><a href="./blog-details.html">Vienna VA</a></li>
-<li><a href="./blog-details.html">Woodbridge VA</a></li>
+  <ul class="dropdown">
+<li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
+<li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
+<li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
+<li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
+<li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
+<li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
+<li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
+<li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
+<li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
+<li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
+<li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
+<li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
+<li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
+<li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
+<li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
+<li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
+<li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
+<li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
+<li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
+<li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
+<li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
+<li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
+<li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
 </ul>
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
-<li class="active"><a href="./contact.html">Booking</a></li>
+<li class="active"><a href="./contact.html">Reserve Ride</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
@@ -271,11 +271,11 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
           <h2 style="text-align: center;">ONLINE RESERVATION</h2>
           <p style="text-align: center;">Up to 20% Off at Online Booking for Wheelchair/Stretcher Van and Ambulatory Services</p>
           <button type="button" class="btn btn-success" style="color: white; background-color: #FF8F00;">New Reservation</button>
-          <button type="button" class="btn btn-success" style="color: white; background-color: #FF8F00;">Calculator</button>
+          <!-- <button type="button" class="btn btn-success" style="color: white; background-color: #FF8F00;">Calculator</button> -->
         </div>
         <div class="container-fluid" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
           <h5>SEND A NEW RESERVATION REQUEST</h5>
-            <form class = "data" name="data" id="data" action="http://192.168.0.36:8000/">
+            <form class = "data" name="data" id="data" action="http://172.20.10.10:8000/">
             <div class="form-group" style="padding-top: 1%;">
               <label for="exampleInput">Main Patient's Name *</label>
               <input type="text" name="Patient_name" class="form-control form-control-lg" id="exampleInput" placeholder="Enter the name" required>
@@ -409,7 +409,7 @@ strict attention.</p>-->
 </div>
 <div class="contact__widget__text">
 <h6>Phone Number</h6>
-<p>+44 20 7930 8205</p>
+<p>+1 540-380-0024</p>
 </div>
 </li>
 <li>
