--- a/career.html
+++ b/career.html
@@ -128,8 +128,8 @@
 </div>
 <div id="mobile-menu-wrap"></div>
 <ul class="offcanvas__widget">
-<li><span class="icon_phone"></span> +44 20 7930 8205</li>
-<li><span class="icon_pin"></span> 450 Strand, Charing Cross, London</li>
+<li><span class="icon_phone"></span> +1 540-380-0024</li>
+<li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
 <div class="offcanvas__auth">
 <a href="#"><span class="icon_profile"></span> Register or Sign in</a>
@@ -149,8 +149,8 @@
 <div class="row">
 <div class="col-lg-9 offset-lg-3">
 <ul class="header__top__widget">
-<li><span class="icon_phone"></span> +1 234 567 8901</li>
-<li><span class="icon_pin"></span> Fairfax, VA, USA</li>
+<li><span class="icon_phone"></span> +1 540-380-0024</li>
+<li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
 <div class="header__top__right">
 <div class="header__top__right__social">
@@ -191,42 +191,42 @@
 
 </ul>
 </li>
-<li><a href="#">Testinomials</a>
+<li><a href="testimonials.html">Testinomials</a>
 <ul class="dropdown">
 <li><a href="./Feedback.html">Feedback Survey</a></li>
 </ul>
 </li>
 <li><a href="./discount.html">Discounts</a></li>
 <li><a href="#">Service Areas</a>
-<ul class="dropdown">
-<li><a href="./about.html">Ashburn VA</a></li>
-<li><a href="./services-details.html">Dumfries VA</a></li>
-<li><a href="./blog-details.html">Fairfax VA</a></li>
-<li><a href="./blog-details.html">Herndon VA</a></li>
-<li><a href="./blog-details.html">Leesburg VA</a></li>
-<li><a href="./blog-details.html">Manassas VA</a></li>
-<li><a href="./blog-details.html">Sterling VA</a></li>
-<li><a href="./blog-details.html">Alexandria VA</a></li>
-<li><a href="./blog-details.html">Annandale VA</a></li>
-<li><a href="./blog-details.html">Arlington VA</a></li>
-<li><a href="./blog-details.html">Bristow VA</a></li>
-<li><a href="./blog-details.html">Burke VA</a></li>
-<li><a href="./blog-details.html">Centreville VA</a></li>
-<li><a href="./blog-details.html">Chantilly VA</a></li>
-<li><a href="./blog-details.html">Falls Church VA</a></li>
-<li><a href="./blog-details.html">Fredrickburg VA</a></li>
-<li><a href="./blog-details.html">Gainesville VA</a></li>
-<li><a href="./blog-details.html">Mc Lean VA</a></li>
-<li><a href="./blog-details.html">Reston VA</a></li>
-<li><a href="./blog-details.html">Springfield</a></li>
-<li><a href="./blog-details.html">Stafford VA</a></li>
-<li><a href="./blog-details.html">Vienna VA</a></li>
-<li><a href="./blog-details.html">Woodbridge VA</a></li>
+  <ul class="dropdown">
+<li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
+<li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
+<li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
+<li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
+<li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
+<li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
+<li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
+<li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
+<li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
+<li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
+<li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
+<li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
+<li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
+<li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
+<li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
+<li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
+<li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
+<li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
+<li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
+<li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
+<li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
+<li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
+<li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
 </ul>
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
 <li class="active"><a href="./career.html">Career</a></li>
-<li><a href="./contact.html">Booking</a></li>
+<li><a href="./contact.html">Reserve Ride</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
@@ -246,7 +246,7 @@
               <h4>WHY DRIVE WITH US?</h4>
               <ul>
                 <li>Top paid</li>
-                <li>$2000 Sign-On Bonus withing 6 months empl</li>
+                <li>Good Sign-On Bonus for 6 months empl</li>
                 <li>Paid Training on the job</li>
                 <li>Starting salary $20 hour and up to $25 per hour with prior experience and passes the required process.</li>
                 <li>Fixed schedule/routine routes</li>
@@ -285,10 +285,10 @@
                       <!-- Indicators -->
                       <ol class="carousel-indicators">
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <!--<li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
                         <li data-target="#myCarousel" data-slide-to="3"></li>
-                        <li data-target="#myCarousel" data-slide-to="4"></li>
+                        <li data-target="#myCarousel" data-slide-to="4"></li>-->
                       </ol>
               
                       <!-- Slides -->
@@ -296,7 +296,7 @@
                         <div class="carousel-item active">
                           <img src="img/hero1.jpg" alt="Image 1" class="d-block w-100">
                         </div>
-                        <div class="carousel-item">
+                       <!-- <div class="carousel-item">
                           <img src="img/hero2.jpg" alt="Image 2" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
@@ -307,7 +307,7 @@
                         </div>
                         <div class="carousel-item">
                           <img src="img/hero5.jpg" alt="Image 5" class="d-block w-100">
-                        </div>
+                        </div>-->
 
                       </div>
               
@@ -383,8 +383,8 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 <div class="footer__widget">
 <h5>Contacts</h5>
 <ul class="address">
-<li><span class="icon_pin"></span> 450 Strand, Charing Cross, US</li>
-<li><span class="icon_phone"></span> +44 20 7930 8205</li>
+<li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
+<li><span class="icon_phone"></span> +1 540-380-0024</li>
 <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">[email&#160;protected]</a></li>
 </ul>
 </div>
