logo changes on index.html

--- a/about.html
+++ b/about.html
@@ -149,107 +149,104 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </div>
 </div>
 
+<!-- 
+<script src="navbar.js"></script>
+
+<div class="navbar"></div> -->
 
 <header class="header">
-<div class="header__top">
-<div class="container">
-<div class="row">
-<div class="col-lg-9 offset-lg-3">
-<ul class="header__top__widget">
-<li><span class="icon_phone"></span> +1 540-380-0024</li>
-<li><span class="icon_pin"></span>5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
-</ul>
-<div class="header__top__right">
-<div class="header__top__right__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
-<div class="header__top__right__social">
-<a href="#"><span class="social_facebook"></span></a>
-<a href="#"><span class="social_twitter"></span></a>
-<a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="header__options">
-<div class="container">
-<div class="row">
-<div class="col-lg-2">
-<div class="header__logo">
-<a href="./index.html"><img data-cfsrc="img/logo.png" alt="" style="height: 50px;"></a>
-</div>
-</div>
-<div class="col-lg-10" style="padding-left: 100px;">
+    <div class="header__top">
+    <div class="container">
+    <div class="row">
+    <div class="col-lg-9 offset-lg-3">
+    <ul class="header__top__widget">
+    <li><span class="icon_phone"></span> +1 540-380-0024</li>
+    <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
+    </ul>
+    <div class="header__top__right">
+    <div class="header__top__right__social">
+    <a href="#"><span class="social_facebook"></span></a>
+    <a href="#"><span class="social_twitter"></span></a>
+    <a href="#"><span class="social_linkedin"></span></a>
+    <a href="#"><span class="social_pinterest"></span></a>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="header__options">
+    <div class="container">
+    <div class="row">
+    <div class="col-lg-2">
+    <div class="header__logo">
+    <a href="./index.html"><img src="img/logo.png" alt="" style="height: 50px;"></a>
+    </div>
+    </div>
+    <div class="col-lg-10" style="padding-left: 100px;">
     <nav class="header__menu mobile-menu">
-<ul>
-<li><a href="./index.html">Home</a></li>
-<li class="active"><a href="./about.html">About Us</a></li>
-<li><a href="./services.html">Services</a>
-<ul class="dropdown">
-<li><a href="./about.html">Elderly Transportation</a></li>
-<li><a href="./services-details.html">Bed to Bed Transportation</a></li>
-<li><a href="./blog-details.html">Strecher Transport</a></li>
-<li><a href="./about.html">Non-Emergency Medical Transportation</a></li>
-<li><a href="./about.html">Wheelchair Transportation</a></li>
-<li><a href="./about.html">Special Tips</a></li>
-<li><a href="./about.html">Ambulatory Transport</a></li>
-<li><a href="./about.html">Long Distance Transportation</a></li>
-<li><a href="./about.html">Bariatric Transportation</a></li>
-
-</ul>
-</li>
-<li><a href="testimonials.html">Testinomials</a>
-<ul class="dropdown">
-  <li><a href="./testimonials.html">Testimonials</a></li>
-<li><a href="./Feedback.html">Feedback Survey</a></li>
-</ul>
-</li>
-<li><a href="./discount.html">Discounts</a></li>
-<li><a href="#">Service Areas</a>
-  <ul class="dropdown">
-<li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
-<li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
-<li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
-<li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
-<li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
-<li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
-<li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
-<li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
-<li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
-<li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
-<li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
-<li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
-<li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
-<li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
-<li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
-<li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
-<li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
-<li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
-<li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
-<li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
-<li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
-<li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
-<li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
-</ul>
-</li>
-<li><a href="./fleet.html">Our Fleet</a></li>
-<li><a href="./career.html">Career</a></li>
-<li><a href="./contact.html">Reserve Ride</a></li>
-<!--<li><a href="#">Brochure</a></li>-->
-</ul>
-</nav>
-</div>
-
-</div>
-</div>
-<div class="canvas__open"><i class="fa fa-bars"></i></div>
-</div>
-</header>
-
-
+    <ul>
+    <li class="active"><a href="./index.html">Home</a></li>
+    <li><a href="./about.html">About Us</a></li>
+    <li><a href="./services.html">Services</a>
+    <ul class="dropdown">
+    <li><a href="./about.html">Elderly Transportation</a></li>
+    <li><a href="./services-details.html">Bed to Bed Transportation</a></li>
+    <li><a href="./blog-details.html">Strecher Transport</a></li>
+    <li><a href="./about.html">Non-Emergency Medical Transportation</a></li>
+    <li><a href="./about.html">Wheelchair Transportation</a></li>
+    <li><a href="./about.html">Special Tips</a></li>
+    <li><a href="./about.html">Ambulatory Transport</a></li>
+    <li><a href="./about.html">Long Distance Transportation</a></li>
+    <li><a href="./about.html">Bariatric Transportation</a></li>
+    
+    </ul>
+    </li>
+    <li><a href="/testimonials.html">Testinomials</a>
+    <ul class="dropdown">
+    <li><a href="./Feedback.html">Feedback Survey</a></li>
+    </ul>
+    </li>
+    <li><a href="./discount.html">Discounts</a></li>
+    <li><a href="#">Service Areas</a>
+    <ul class="dropdown">
+    <li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
+    <li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
+    <li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
+    <li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
+    <li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
+    <li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
+    <li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
+    <li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
+    <li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
+    <li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
+    <li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
+    <li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
+    <li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
+    <li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
+    <li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
+    <li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
+    <li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
+    <li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
+    <li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
+    <li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
+    <li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
+    <li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
+    <li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
+    </ul>
+    </li>
+    <li><a href="./fleet.html">Our Fleet</a></li>
+    <li><a href="./career.html">Career</a></li>
+    <li><a href="./contact.html">Reserve Ride</a></li>
+    <!--<li><a href="#">Brochure</a></li>-->
+    </ul>
+    </nav>
+    </div>
+    </div>
+    </div>
+    <div class="canvas__open"><i class="fa fa-bars"></i></div>
+    </div>
+    </header>
 <div class="breadcrumb-option set-bg" data-setbg="img/breadcrumb-bg.jpg">
 <div class="container">
 <div class="row">
