--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
     <div class="row">
     <div class="col-lg-2">
     <div class="header__logo">
-    <a href="./index.html"><img src="img/logo.png" alt="" style="height: 50px;"></a>
+    <a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 80px;"></a>
     </div>
     </div>
     <div class="col-lg-10" style="padding-left: 100px;">
@@ -555,7 +555,7 @@ page when looking at its layout.</p>
 <div class="col-lg-4 col-md-6 col-sm-6">
 <div class="footer__about">
 <div class="footer__logo">
-<a href="/index.html"><img data-cfsrc="img/logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img src="img/logo.png" alt=""></noscript></a>
+<a href="/index.html"><img data-cfsrc="img/new-logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img src="img/logo.png" alt=""></noscript></a>
 </div>
 <p>Consectetur adipiscing elit, sed do eiusmod tempor labore et dolore magna aliqua. Quis ipsum
 suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
