--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
 <div class="row">
 <div class="col-lg-2">
 <div class="header__logo">
-<a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 100px;"></a>
+<a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 90px;"></a>
 </div>
 </div>
 <div class="col-lg-10" style="padding-left: 100px;">
 <nav class="header__menu mobile-menu">
 <ul>
 <li class="active"><a href="./index.html">Home</a></li>
-<li><a href="./about.html">About Us</a></li>
+<li><a href="./about.html">About</a></li>
 <li><a href="./services.html">Services</a>
 <ul class="dropdown">
 <li><a href="./about.html">Elderly Transportation</a></li>
@@ -231,7 +231,7 @@
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
-<li><a href="./contact.html">Reserve Ride</a></li>
+<li><a href="./contact.html">Reserve</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
@@ -766,7 +766,7 @@ ut labore et dolore magna aliqua.</p>-->
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="img/logo.png" alt="">
+                <img src="img/new-logo.png" alt="" style="width: 80%;background-color: #00475a;">
             </div>
             <div class="col">
                 <h5>No better place to get you healthy again</h5>
@@ -815,7 +815,7 @@ ut labore et dolore magna aliqua.</p>-->
 <div class="col-lg-4 col-md-6 col-sm-6">
 <div class="footer__about">
 <div class="footer__logo">
-<a href="/index.html"><img src="img/logo.png" alt="" style="height: 150px;"></a>
+<a href="/index.html"><img src="img/new-logo.png" alt="" style="height: 150px;"></a>
 </div>
 <p>Consectetur adipiscing elit, sed do eiusmod tempor labore et dolore magna aliqua. Quis ipsum
 suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
