--- a/testimonials.html
+++ b/testimonials.html
@@ -174,7 +174,7 @@
 <div class="row">
 <div class="col-lg-2">
 <div class="header__logo">
-<a href="./index.html"><img src="img/logo.png" alt="" style="height: 50px;"></a>
+<a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 80px;"></a>
 </div>
 </div>
 <div class="col-lg-10" style="padding-left: 100px;">
@@ -574,7 +574,7 @@ ut labore et dolore magna aliqua.</p>-->
 <div class="col-lg-4 col-md-6 col-sm-6">
 <div class="footer__about">
 <div class="footer__logo">
-<a href="/index.html"><img src="img/logo.png" alt="" style="height: 150px;"></a>
+<a href="/index.html"><img src="img/new-logo.png" alt="" style="height: 150px;"></a>
 </div>
 <p>Consectetur adipiscing elit, sed do eiusmod tempor labore et dolore magna aliqua. Quis ipsum
 suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
